src/styles/data-title-styles.css
[data-title]:hover:after {
  opacity: 1;
  transition: all 0.1s ease 0.5s;
  visibility: visible;
}
[data-title]:after {
  content: attr(data-title);
  font-size: 12px;
  position: absolute;
  padding: 2px 6px;
  left: 50%;
  top: calc(100% + 2px);
  transform: translate(-50%, 0%);
  white-space: nowrap;
  opacity: 0;
  visibility: hidden;
  font-weight: 500;
  border-radius: 4px;
}
[data-title] {
  position: relative;
}

@media (prefers-color-scheme: dark) {
  [data-title]:after {
    background: var(--textDark);
    color: var(--backgroundThirdDark);
  }
}
@media (prefers-color-scheme: light) {
  [data-title]:after {
    background: var(--textLight);
    color: var(--backgroundThirdLight);
  }
}

